fix event summary layout when meta text wraps

--- a/css/posts.less
+++ b/css/posts.less
@@ -547,11 +547,11 @@ ul.posts {
     background-color: #ccc;
     float: left;
     background-size: cover;
+    margin-right: 15px;
   }
 
   > .meta {
-    padding-left: 15px;
-    display: inline-block;
+    display: block;
   }
 
   .title {
@@ -576,6 +576,7 @@ ul.posts {
     width: 61.8%;
     display: inline-block;
     padding-left: 15px;
+    margin-left: -15px;
 
     .going {
       width: 68%;
